Update readme links

--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
     "name": "monokai-light",
     "displayName": "Monokai Light",
     "description": "Monokai Light Theme",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "publisher": "zoxon",
     "engines": {
         "vscode": "^1.12.0"
     },
     "categories": [
         "Themes"
+    ],
+    "keywords": [
+        "monokai",
+        "colorful",
+        "light",
+        "theme",
+        "saturated",
+        "vscode"
     ],
     "contributes": {
         "themes": [
